# do

./: .travis.yml  README.md  default.nix  do.cabal  do.nix  release.nix  shell.nix
app/: Main.hs
nixpkgs/: default.nix
src/Do/: CLI.hs  Parser.hs  Run.hs  Types.hs
test/: Main.hs
test/data/: do.nix  import.nix  subdo.nix
test/data/folder/: import.nix
